# eeg-step

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: workflow.yml
docs/: api.md  conf.py  index.md
docs/examples/: n400.qmd
src/step/: average.py  component.py  epoch.py  epoching.py  group.py  helpers.py  input.py  participant.py  preproc.py
tests/: conftest.py  test_average.py  test_component.py  test_datasets.py  test_epoch.py  test_epoching.py  test_group.py  test_input.py  test_participant.py  test_preproc.py
